<resources>
    <string name="app_name">Project Tracker</string>
    <string name="login">Login</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_home2">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="set_photo">set_photo</string>
    <string name="no_of_attempts_remaining">No of attempts remaining:</string>
    <string name="logout">Logout</string>
    <string name="messages">Messages</string>
    <string name="message">Message</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="search">Search</string>
    <string name="password">Password</string>
    <string name="notes">NOTES</string>
    <string name="assignments">ASSIGNMENTS</string>
    <string name="tasks">TASKS</string>
    <string name="dashboard">DASHBOARD</string>
</resources>